# pipeline-script

./: .gitignore  Cargo.toml  README.md  core.ppl  hello.kts  main.ppl  test.ll  test.ppl
.github/workflows/: rust.yml
crates/pipeline-script/: Cargo.toml
crates/pipeline-script/src/: lib.rs  main.rs
crates/wrap-llvm/: Cargo.toml
crates/wrap-llvm/src/: builder.rs  context.rs  executor.rs  function.rs  global.rs  lib.rs  module.rs  types.rs  value.rs
src/: context.rs  engine.rs  error.rs  expr.rs  lexer.rs  lib.rs  main.rs  module.rs  parser.rs  position.rs  stmt.rs  token.rs  types.rs
src/ast/: class.rs  compile.rs  data.rs  declaration.rs  expr.rs  function.rs  helper.rs  mod.rs  module.rs  node.rs  stmt.rs  struct.rs  type.rs  type_alias.rs  visit.rs
src/ast/expr/: function_call.rs  mod.rs
src/compiler/: expr.rs  helper.rs  mod.rs  stmt.rs  type.rs
src/context/: key.rs  mod.rs  scope.rs  value.rs
src/core/: app.rs  buidin.rs  builtin.rs  engine.rs  error.rs  mod.rs  value.rs
src/lexer/: iter.rs  mod.rs  position.rs  token.rs
src/llvm/: builder.rs  context.rs  executor.rs  function.rs  global.rs  lib.rs  mod.rs  module.rs  types.rs  value.rs
src/llvm/value/: array.rs  bool.rs  (+9 more)
src/parser/: class.rs  declaration.rs  expr.rs  function.rs  helper.rs  mod.rs  module.rs  ptype.rs  stmt.rs  struct.rs  type.rs  type_alias.rs
src/plugin/: builtin.rs  format_string.rs  method.rs  mod.rs  task.rs  test.rs
src/postprocessor/: function_printer.rs  id.rs  manage.rs  method.rs  mod.rs  module_merger.rs  printer.rs  type.rs
src/preprocessor/: mod.rs
(+34 files in other folders)
