[package]
name = "pipeline-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
regex = "1.10.2"
rand = "0.9.0-alpha.1"
scanner-rust = "2.0.17"
ssh-rs = { version = "0.5.0", features = ["scp"] }