[package]
name = "pipeline-script"
version = "0.2.0"
edition = "2021"
description = "Script engine designed for the project construction tool pipeline(crate name pipeline-cli)"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
regex = "1.10.2"
rand = "0.9.0-alpha.1"
scanner-rust = "2.0.17"
ssh-rs = { version = "0.5.0", features = ["scp"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm18-0"] }
